--- a/view/ui.ui
+++ b/view/ui.ui
@@ -149,20 +149,38 @@
      <rect>
       <x>520</x>
       <y>180</y>
-      <width>290</width>
+      <width>141</width>
       <height>70</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>20</pointsize>
+      <pointsize>18</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>Clear [Delete]</string>
+     <string>Clear [Del]</string>
     </property>
     <property name="shortcut">
      <string>Del</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnReencode">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>180</y>
+      <width>141</width>
+      <height>70</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Re-Encode</string>
     </property>
    </widget>
   </widget>
